--- a/src/components/buttons/SubmitButton.astro
+++ b/src/components/buttons/SubmitButton.astro
@@ -1,13 +1,13 @@
-<button type="submit">submit</button>
+<button type="submit">Get In Touch</button>
 
 <style>
     button {
-        background-color: var(--color-surface-success);
+        background-color: var(--color-surface-accent);
         color: var(--color-text-inverted);
         border: none;
         border-radius: var(--rounded-sm);
         padding: 0.5rem 1rem;
-        text-transform: uppercase;
+        text-transform: capitalize;
 
         &:hover,
         &:focus-visible {
