--- a/src/components/PageHero.astro
+++ b/src/components/PageHero.astro
@@ -21,7 +21,7 @@ const { title, imageUrl } = Astro.props;
     .hero {
         position: relative;
         width: 100%;
-        height: 50dvh;
+        height: 50vh;
     }
 
     .hero img {
