--- a/src/components/cards/PrimaryCard.astro
+++ b/src/components/cards/PrimaryCard.astro
@@ -7,10 +7,11 @@
         /* give card min height and width so it is visible with no content */
         min-block-size: 10px;
         min-inline-size: 10px;
-        display: inline-block;
         /* styles */
         background-color: var(--color-surface-card);
         box-shadow: var(--shadow-card);
         border-radius: var(--rounded-lg);
+        inline-size: fit-content;
+        border: 2px solid var(--color-border);
     }
 </style>
