--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,6 @@ const { title } = Astro.props;
         grid-template-rows: auto 1fr auto;
         grid-template-columns: 1fr;
         grid-template-areas:
-            'header'
             'main'
             'footer';
     }
@@ -73,7 +72,7 @@ const { title } = Astro.props;
     }
 
     header {
-        grid-area: header;
+        grid-area: main;
     }
 
     main {
