--- a/src/styles/layers/utilities.css
+++ b/src/styles/layers/utilities.css
@@ -29,3 +29,22 @@
     pointer-events: none; /* lets you still click the image */
     z-index: 10;
 }
+
+.gradient-overlay-2 {
+    position: relative;
+    display: inline-block; /* or block, depending on layout */
+}
+
+.gradient-overlay-2::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(
+        to bottom,
+        rgb(var(--color-surface-overlay) / 0) 50%,
+        rgb(var(--color-surface-overlay) / 0.5) 75%,
+        rgb(var(--color-surface-overlay) / 1) 100%
+    );
+    pointer-events: none; /* lets you still click the image */
+    z-index: 10;
+}
