--- a/src/styles/reactComponents/projectSwitcher.module.css
+++ b/src/styles/reactComponents/projectSwitcher.module.css
@@ -16,8 +16,10 @@
 }
 
 .myControls {
-    position: relative;
-    transform: translateY(-50%);
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -39,6 +41,10 @@
     justify-content: center;
     align-items: center;
     gap: 0.25rem;
+
+    p {
+        margin-top: 0 !important;
+    }
 }
 
 .viewProjectButton {
