integrate Sanity CMS

--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import { getProjects } from '../../lib.ts';
 import Layout from '@layouts/Layout.astro';
 import HeroImage from '@components/HeroImage.astro';
