--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,6 +33,7 @@
     footer {
         background-color: var(--color-surface-card);
         padding: 3rem 5rem;
+        margin-top: 3rem;
     }
 
     ul {
