--- a/src/components/PersonImage.astro
+++ b/src/components/PersonImage.astro
@@ -70,6 +70,11 @@ const { imageUrl, name } = Astro.props;
             object-fit: cover;
             border-top-right-radius: var(--radius-var);
             border-bottom-right-radius: var(--radius-var);
+            aspect-ratio: 4 / 3;
+
+            @media (min-width: 768px) {
+                width: 300px;
+            }
         }
     }
 </style>
