--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -92,8 +92,9 @@ if (Astro.request.method === 'POST') {
         padding-block: 2rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 1.5rem;
-        place-items: center;
+        gap: 2rem;
+        align-items: start;
+        justify-items: center;
         text-align: center;
 
         @media (max-width: 1200px) {
