--- a/src/components/buttons/LinkButton.astro
+++ b/src/components/buttons/LinkButton.astro
@@ -10,5 +10,10 @@ const { href } = Astro.props;
 
 <style>
     a {
+        background: transparent;
+        padding: 0.5rem 1rem;
+        outline: none;
+        border: 1px solid var(--color-text-primary);
+        font-weight: bold;
     }
 </style>
