--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -118,9 +118,11 @@ import ThematicBreak from '@components/ThematicBreak.astro';
         align-items: center;
         gap: 1.5rem;
         inline-size: 100%;
+        text-align: center;
 
         @media (min-width: 1200px) {
             flex-direction: row;
+            text-align: left;
         }
     }
 
