--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -3,6 +3,16 @@ import Layout from '@layouts/Layout.astro';
 import PageHero from '@components/PageHero.astro';
 import Grid from '@components/Grid.astro';
 import ThemacticBreak from '@components/ThematicBreak.astro';
+import AdditionIcon from '../assets/icons/addition.svg';
+import BeachIcon from '../assets/icons/beachfront.svg';
+import BudgetIcon from '../assets/icons/budget.svg';
+import CommercialIcon from '../assets/icons/commercial.svg';
+import ConservationIcon from '../assets/icons/conservation.svg';
+import ConsultationIcon from '../assets/icons/consultations.svg';
+import FloodIcon from '../assets/icons/floodplain.svg';
+import NewResidenceIcon from '../assets/icons/new-residence.svg';
+import RenovationIcon from '../assets/icons/renovation.svg';
+import ZoningIcon from '../assets/icons/zoning.svg';
 ---
 
 <Layout title="Services">
@@ -24,7 +34,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
         <Grid>
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=1" />
+                    <ConservationIcon />
                 </div>
                 <h4>Conservation Issues</h4>
                 <p>
@@ -37,7 +47,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=2" />
+                    <FloodIcon />
                 </div>
                 <h4>Floodplain Projects</h4>
                 <p>
@@ -50,7 +60,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=3" />
+                    <BudgetIcon />
                 </div>
                 <h4>Budget and Cost Analysis</h4>
                 <p>
@@ -62,7 +72,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=4" />
+                    <ZoningIcon />
                 </div>
                 <h4>Site and Zoning Analysis</h4>
                 <p>
@@ -75,7 +85,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=5" />
+                    <ConsultationIcon />
                 </div>
                 <h4>On Site Project Consultations</h4>
                 <p>
@@ -100,7 +110,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
         <Grid>
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=6" />
+                    <NewResidenceIcon />
                 </div>
                 <h4>New Residences</h4>
                 <p>
@@ -113,7 +123,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=7" />
+                    <RenovationIcon />
                 </div>
                 <h4>Renovations</h4>
                 <p>
@@ -126,7 +136,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=8" />
+                    <AdditionIcon />
                 </div>
                 <h4>Additions</h4>
                 <p>
@@ -139,7 +149,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=9" />
+                    <CommercialIcon />
                 </div>
                 <h4>Commercial</h4>
                 <p>
@@ -151,7 +161,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
 
             <div class="service">
                 <div class="icon">
-                    <img src="https://picsum.photos/50/50?random=10" />
+                    <BeachIcon />
                 </div>
                 <h4>Beach and Oceanfront</h4>
                 <p>
@@ -170,6 +180,7 @@ import ThemacticBreak from '@components/ThematicBreak.astro';
             flex-direction: column;
             justify-content: flex-start;
             align-items: flex-start;
+            padding: 2rem;
         }
 
         .icon {
