--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -11,7 +11,7 @@ const projects = await getAllProjects();
 <Layout title="Portfolio">
     <HeroImage imageUrl="https://picsum.photos/1920/1080" />
     <section class="portfolio-section section wrapper">
-        <h2 class="page-title">Explore Our Projects</h2>
+        <h2 class="page-title text-shadow">Explore Our Projects</h2>
         <Grid>
             {
                 projects.map((project) => (
