--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -47,7 +47,7 @@ function srcsetFor(img: GalleryImage) {
         </div>
         <div class="info">
             <div class="info-text">
-                <h1 class="title">{project?.title}</h1>
+                <h1 class="title text-shadow">{project?.title}</h1>
                 <ThematicBreak />
                 <div class="categories">
                     {
