--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -105,10 +105,12 @@
         padding: 0.5rem 1rem;
         text-transform: capitalize;
         justify-self: end;
+        transition: transform 0.3s ease;
+        font-weight: bold;
 
         &:hover,
         &:focus-visible {
-            background-color: rebeccapurple;
+            transform: scale(1.05);
         }
     }
 </style>
