--- a/src/components/PersonImage.astro
+++ b/src/components/PersonImage.astro
@@ -1,4 +1,8 @@
 ---
+import XLogo from '../assets/icons/x-logo.svg';
+import EmailLogo from '../assets/icons/email.svg';
+import InstagramLogo from '../assets/icons/instagram.svg';
+
 interface Props {
     imageUrl: string;
     name: string;
@@ -9,24 +13,15 @@ const { imageUrl, name } = Astro.props;
 
 <div class="person-image">
     <div class="socials">
-        <img
-            src="https://picsum.photos/48/48?random=1"
-            alt="social media icons"
-            width="24"
-            height="24"
-        />
-        <img
-            src="https://picsum.photos/48/48?random=1"
-            alt="social media icons"
-            width="24"
-            height="24"
-        />
-        <img
-            src="https://picsum.photos/48/48?random=1"
-            alt="social media icons"
-            width="24"
-            height="24"
-        />
+        <div class="icon">
+            <a href="/"><EmailLogo /></a>
+        </div>
+        <div class="icon">
+            <a href="/"><XLogo /></a>
+        </div>
+        <div class="icon">
+            <a href="/"><InstagramLogo /></a>
+        </div>
     </div>
     <div class="image-container">
         <img src={imageUrl} alt={name} />
@@ -54,10 +49,9 @@ const { imageUrl, name } = Astro.props;
         border-top-left-radius: var(--radius-var);
         border-bottom-left-radius: var(--radius-var);
 
-        img {
+        .icon {
             width: 24px;
             height: 24px;
-            object-fit: cover;
         }
     }
 
