--- a/src/components/buttons/LinkButton.astro
+++ b/src/components/buttons/LinkButton.astro
@@ -14,6 +14,13 @@ const { href } = Astro.props;
         padding: 0.5rem 1rem;
         outline: none;
         border: 1px solid var(--color-text-primary);
+        transition: transform 0.3s ease;
         font-weight: bold;
+    }
+
+    a:hover,
+    a:focus-visible {
+        color: var(--color-text-primary) !important;
+        transform: scale(1.05);
     }
 </style>
