--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import ProjectSwiper from '@components/ProjectSwiper';
+import SubImage from '../assets/atlantic_ave2.webp';
+import LinkButton from '@components/buttons/LinkButton.astro';
 import { getFeaturedProjects } from 'src/lib';
 
 const projects = await getFeaturedProjects();
@@ -11,7 +13,7 @@ const projects = await getFeaturedProjects();
 
     <section class="subheading section wrapper">
         <div class="subheading-image">
-            <img src="" alt={projects[0].title} />
+            <img src={SubImage.src} alt="subheading image" />
         </div>
         <div class="subheading-text">
             <h2>Trusted for over 35 years</h2>
@@ -23,6 +25,9 @@ const projects = await getFeaturedProjects();
                 seamless, efficient, and enjoyable experience from concept to
                 completion.
             </p>
+            <div class="learnButton">
+                <LinkButton href="/about">Learn More</LinkButton>
+            </div>
         </div>
     </section>
 
@@ -47,13 +52,32 @@ const projects = await getFeaturedProjects();
     .subheading {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         gap: 2rem;
         text-align: center;
 
+        .subheading-text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+
+            @media (min-width: 1200px) {
+                .learnButton {
+                    align-self: flex-end;
+                }
+            }
+        }
+
         .subheading-image {
-            max-inline-size: 350px;
+            max-inline-size: 450px;
+            border-radius: var(--rounded);
+
+            img {
+                border-radius: var(--rounded);
+            }
         }
     }
 
@@ -68,6 +92,7 @@ const projects = await getFeaturedProjects();
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
 
         @media (min-width: 1200px) {
             flex-direction: row;
@@ -79,5 +104,6 @@ const projects = await getFeaturedProjects();
         max-width: 100%;
         aspect-ratio: 16 / 9;
         border: none;
+        margin: 1.5rem;
     }
 </style>
