--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -133,10 +133,13 @@ import ThematicBreak from '@components/ThematicBreak.astro';
         h4 {
             text-transform: uppercase !important;
             font-weight: 400;
+            font-size: 1.2rem !important;
+            margin-bottom: 0 !important;
         }
 
         h3 {
             margin-top: 0.25em !important;
+            font-size: 1.7rem !important;
         }
     }
 
