--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -92,7 +92,7 @@ if (Astro.request.method === 'POST') {
         display: flex;
         flex-flow: column nowrap;
         justify-content: flex-start;
-        algin-items: center;
+        align-items: center;
         text-align: center;
         gap: 2rem;
     }
