--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -107,7 +107,7 @@ import ThematicBreak from '@components/ThematicBreak.astro';
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        algin-items: flex-start;
+        align-items: flex-start;
         gap: var(--padding-2xl);
     }
 
