--- a/src/components/ProjectThumb.astro
+++ b/src/components/ProjectThumb.astro
@@ -33,6 +33,6 @@ const { title, imageSrc, url } = Astro.props;
         padding: 1rem;
         display: flex;
         justify-content: center;
-        algin-items: center;
+        align-items: center;
     }
 </style>
