--- a/src/styles/reactComponents/projectSwitcher.module.css
+++ b/src/styles/reactComponents/projectSwitcher.module.css
@@ -106,7 +106,7 @@
 .arrowButton {
     display: inline-flex;
     justify-content: center;
-    algin-items: center;
+    align-items: center;
     border: none;
     background: transparent;
 }
