finally fixed header issue

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -78,7 +78,7 @@ import logoUrl from '@assets/rockwood-design-logo-2.png?url';
         gap: 1rem;
         padding: 1rem 2rem;
         width: 100%;
-        position: fixed;
+        position: absolute;
         inset: 0 auto auto 0;
         z-index: 10000;
     }
