add logo; fix style

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -101,6 +101,7 @@ if (Astro.request.method === 'POST') {
         .contact-info-section {
             flex-flow: row wrap;
             justify-content: center;
+            align-items: flex-start;
         }
     }
 
