--- a/src/styles/reactComponents/projectSwitcher.module.css
+++ b/src/styles/reactComponents/projectSwitcher.module.css
@@ -15,20 +15,34 @@
 }
 
 .mySwiperContainer {
-    block-size: 75dvh;
+    block-size: 60dvh;
     inline-size: 100%;
 }
 
-.myControls {
+.infoSection {
     position: relative;
-    margin: 0 auto;
     margin-top: -100px;
+    z-index: 1000;
+    inline-size: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.title {
+    font-size: var(--fs-title-large);
+    text-align: center;
+    margin-bottom: 1rem;
+    line-height: 1;
+}
+
+.myControls {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    z-index: 1000;
     background-color: rgb(23 23 27 / 0.8);
     border-radius: var(--rounded);
     border: 2px solid var(--color-border);
