--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -13,13 +13,11 @@ import FloodIcon from '../assets/icons/floodplain.svg';
 import NewResidenceIcon from '../assets/icons/new-residence.svg';
 import RenovationIcon from '../assets/icons/renovation.svg';
 import ZoningIcon from '../assets/icons/zoning.svg';
+import HeroImage from '../assets/new_gate.webp';
 ---
 
 <Layout title="Services">
-    <PageHero
-        imageUrl="https://picsum.photos/1920/1080?random=2"
-        title="Planning and Services"
-    >
+    <PageHero imageUrl={HeroImage.src} title="Planning and Services">
         <p>
             At Rockwood Design, we provide comprehensive planning and
             architectural services tailored to each project's unique needs. From
