updated google map

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,9 +49,9 @@ const projects = await getFeaturedProjects();
         </div>
         <div class="subheading-image">
             <iframe
-                src="https://www.google.com/maps/d/embed?mid=12AERk8C8fTaJElpMLewfFXcJ-R_1XiI&ehbc=2E312F&noprof=1"
-                width="600"
-                height="300"></iframe>
+                src="https://www.google.com/maps/d/embed?mid=1iPE38pOiDV3N5WCVVMcZnCG1AL9wpHY&ehbc=2E312F"
+                width="640"
+                height="480"></iframe>
         </div>
     </section>
 </Layout>
