fix hero heights for landscape mode

--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -103,7 +103,7 @@ function srcsetFor(img: GalleryImage) {
     }
 
     .hero {
-        block-size: 60svh;
+        block-size: max(60svh, 400px);
         z-index: 1;
     }
 
