--- a/src/components/HeroImage.astro
+++ b/src/components/HeroImage.astro
@@ -16,7 +16,7 @@ const { imageUrl } = Astro.props;
     .hero {
         position: relative;
         width: 100%;
-        height: 60vh;
+        block-size: max(60vh, 400px);
     }
 
     .hero img {
