--- a/src/components/PageHero.astro
+++ b/src/components/PageHero.astro
@@ -25,7 +25,7 @@ const { title, imageUrl } = Astro.props;
 
     .hero {
         width: 100%;
-        height: 60svh;
+        block-size: max(60svh, 400px);
         z-index: 1;
     }
 
