fix max width isssue on project images

--- a/src/components/ProjectThumb.astro
+++ b/src/components/ProjectThumb.astro
@@ -20,6 +20,7 @@ const { title, imageSrc, url } = Astro.props;
         border-radius: var(--rounded);
         background-color: var(--color-surface-card);
         box-shadow: var(--shadow-2xl);
+        max-width: 300px;
     }
 
     img {
