--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -179,6 +179,7 @@ function srcsetFor(img: GalleryImage) {
         outline: 1px solid rgb(255 255 255 / 0.06);
         aspect-ratio: 4 / 3; /* use 1/1 for square, 3/2 for wider */
         background: #111;
+        max-width: 300px;
     }
     .thumb img {
         width: 100%;
